fixing overflow

--- a/INSO4115_4117_CourseProject/src/App.css
+++ b/INSO4115_4117_CourseProject/src/App.css
@@ -7,6 +7,11 @@
 }
 body {
   background-color: #95f985;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 .App-logo {
   height: 40vmin;
